--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="label_toggle_usb_debugging">USB Debugging</string>
     <string name="label_keep_screen_on">Keep screen on</string>
     <string name="label_toggle_show_touches">Show taps</string>
+    <string name="label_toggle_demo_mode">Demo mode</string>
 
     <string name="permission_required_toast">Need to grant permission. Please run:\n\n
     adb shell pm grant xyz.mustafaali.devtiles
