--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,14 +7,11 @@
     <string name="label_toggle_show_touches">Show taps</string>
     <string name="label_toggle_demo_mode">Demo mode</string>
 
-    <string name="permission_required_toast">Need to grant permission. Please run:\n\n
-    adb shell pm grant xyz.mustafaali.devtiles
-    android.permission.WRITE_SECURE_SETTINGS</string>
+    <string name="permission_required_toast">Need to grant permission</string>
 
     <!-- Home screen -->
     <string name="grant_permission">Grant Permissions</string>
-    <string name="permission_command">adb shell pm grant xyz.mustafaali.devtiles android.permission.WRITE_SECURE_SETTINGS\n\nadb shell pm grant xyz.mustafaali.devtiles android.permission.DUMP
-    </string>
+    <string name="permission_command">adb shell pm grant xyz.mustafaali.devqstiles android.permission.WRITE_SECURE_SETTINGS\n\nadb shell pm grant xyz.mustafaali.devqstiles android.permission.DUMP</string>
     <string name="btn_label_copy">Copy</string>
 
     <string name="features_title">Available Tiles</string>
