--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
         <b>Toggle Demo Mode</b> <br />
         No more status bar clutter during demos or in screenshots <br /><br />
         <b>Toggle Animator Duration</b> <br />
-        Toggle animator duration scales
+        Easily debug your fancy animations
         ]]>
     </string>
 
