--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="msg_share_app">Check out Dev Tiles on Google Play – https://play.google.com/store/apps/details?id=xyz.mustafaali.devqstiles</string>
     <string name="menu_licenses">Licenses</string>
     <string name="menu_rate_app">Rate app</string>
+    <string name="menu_request_feature">Request feature</string>
 </resources>
