--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,9 +28,9 @@
 
     <string name="features_title">Available Tiles</string>
 
-    <string name="menu_share_app">Share App</string>
+    <string name="menu_share_app">Share</string>
     <string name="msg_share_app">Check out Dev Tiles on Google Play – https://play.google.com/store/apps/details?id=xyz.mustafaali.devqstiles</string>
     <string name="menu_licenses">Licenses</string>
-    <string name="menu_rate_app">Rate app</string>
+    <string name="menu_rate_app">Rate</string>
     <string name="menu_request_feature">Request feature</string>
 </resources>
